--- a/kartka.html
+++ b/kartka.html
@@ -21,7 +21,7 @@
                 
                 <p>Niech te święta będą odcięciem</p>
                 <p>od wszytskiego,co złe dookoła.</p>
-                <p>Niech nasycą Cię ciepłem,</p><br>
+                <p>Niech nasycą Cię ciepłem,</p>
                 <p>spokoje i miłością</p>
                 </div>
                 <div class="renifer"></div>
